# scrap-up-work-com

./: README.md  pyproject.toml  scan.py  settings.py
files/: upwork_jobs_page.html  upwork_profile_page.html
resources/: base.py  decorators.py  error_messages.py  exceptions.py  models.py
scanners/: upwork.py
tests/: conftest.py  test_parser.py  test_profile.py
tests/files/: upwork_jobs_page_for_testing.html  upwork_profile_page_for_testing.html
utils/: date_utils.py  file_utils.py
