[tool.poetry]
name = "scrap-up-work-com"
version = "0.1.0"
description = ""
authors = ["Alfonso <alfareiza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
httpx = "^0.25.1"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"
typer = "^0.9.0"
pydantic = "^2.5.1"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"
mypy = "^1.7.0"
types-beautifulsoup4 = "^4.12.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
